fixed top nav z-index bug

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -233,6 +233,8 @@ small
 
     .nav
       height: 100%
+      position: relative
+      z-index: 100
 
       > li
         height: 100%
